Archive2/18/e0f9ce37b27adf/output
main.cpp:9:37: error: expected ';' at end of member declaration
     Foo(std::initializer_list<int> i) bar(i);
                                     ^
main.cpp:9:43: error: 'i' has not been declared
     Foo(std::initializer_list<int> i) bar(i);
                                           ^
main.cpp:9:44: error: ISO C++ forbids declaration of 'bar' with no type [-fpermissive]
     Foo(std::initializer_list<int> i) bar(i);
                                            ^
main.cpp:9:44: error: 'int Foo::bar(int)' conflicts with a previous declaration
main.cpp:7:14: note: previous declaration 'int Foo::bar [3]'
     int bar[3];
              ^
